--- a/app/src/main/res/layout/activity_tv.xml
+++ b/app/src/main/res/layout/activity_tv.xml
@@ -11,7 +11,7 @@
     tools:context="com.sakebook.android.nexustimer.TvActivity">
 
     <TextView
-        android:id="@+id/atext"
+        android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
