--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="@style/Theme.Leanback">
-    </style>
-    <style name="Theme.Example.Leanback" parent="Theme.Leanback">
+    <style name="AppTheme" parent="Theme.Leanback">
         <item name="android:windowEnterTransition">@android:transition/fade</item>
         <item name="android:windowExitTransition">@android:transition/fade</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
@@ -10,8 +8,11 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowAllowEnterTransitionOverlap">true</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="android:colorPrimary">@color/search_opaque</item>
+        <item name="searchOrbViewStyle">@style/CustomSearchOrbView</item>
+    </style>
 
+    <style name="CustomSearchOrbView" parent="Widget.Leanback.SearchOrbViewStyle">
+        <item name="searchOrbIcon">@drawable/ic_add_vector</item>
     </style>
 
 </resources>
