--- a/app/src/main/res/layout/activity_tv.xml
+++ b/app/src/main/res/layout/activity_tv.xml
@@ -8,10 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sakebook.android.nexustimer.TvActivity">
+    tools:context=".ui.TvActivity">
 
     <fragment
-        android:name="com.sakebook.android.nexustimer.TvFragment"
+        android:name="com.sakebook.android.nexustimer.ui.TvFragment"
         android:id="@+id/browse_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
